# cryoet-alignment

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please.config.json
.github/workflows/: release-please.yml  test.yml
src/cryoet_alignment/: __init__.py
src/cryoet_alignment/api/: read.py  write.py
src/cryoet_alignment/io/: base.py
src/cryoet_alignment/io/aretomo3/: __init__.py  aln.py
src/cryoet_alignment/io/cryoet_data_portal/: __init__.py  alignment.py
src/cryoet_alignment/io/imod/: ImodAlignment.py  __init__.py  newst.py  rawtlt.py  tilt.py  xf.py
src/cryoet_alignment/util/: image.py
test/: test_alignment.py
test/data/: test.xf  tilt.com
test/data/convert/imod_1/: newst.com  tilt.com  tilt_1.tlt  tilt_1.xf
tests/: conftest.py  test_aretomo3.py  test_imod.py
tests/data/: TiltSeries_Metrics.csv  newst.com  test.aln  test.rawtlt  test_CTF.txt  tilt.com
